--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</sup>
 </h1>
 	<div class="col-lg-7 col-md-7 col-sm-5 col-xs-13 login_div">
-	<img src="bird.jpg" class="logo">
+	<img src="logo.png" class="logo">
 	<br><br>
 		<h3 >See what is happening in the world right now</h3>
 		<h4 >Lets Start Chatting today!</h4>
