--- a/kwitter_room.html
+++ b/kwitter_room.html
@@ -31,7 +31,7 @@
 			<label>#Add Room:</label>
 <input id="room_name" type="text" class="form-control" placeholder="#room name">
 		</div>
-		<button onclick="addRoom();" class="btn btn-success">#Add Room</button>
+		<button id="room_button" onclick="addRoom();" class="btn btn-success">#Add Room</button>
 		<h3 class="color_white">#TRENDINGROOMS</h3>
 	<div id="output"> </div>
 	</center>
